18-08-20

Various bug fixes

Admins can test user menus

Adjustments for wespecialty - handle duplicate headings better and files containing premiums and claims

XLSX

Considerable work building Oilfield and Wespeciality

AllRisks tweaks - what is there now does seem to submit on 0 grossamt claims

15-07-20-3

Import file template lookup bug fix

XLSX

Continue Oilfield Claims and WeSpeciality build

08-07-20

A few bug fixes - wespeciality

06-07-20-2

Bug fixes on the preprocessor, better error messages

Initial work on the users API

XLSX

Continue Oilfield Claims and WeSpeciality build

Allrisks Claims limnet currency to 002

30-06-20-3

New preprocessor bug fixes x 3

Download a summary of recent user activity.

XLSX

AllRisks Premium bug fix, Claims new tags in (GrossAmt 0 and Lloyds Lead)

Continue Oilfields Build

25-06-20

Augment auto backup to use a specified directory

code to handle 'categorisation on'

XLSX

Further building on Weber/Oilfields/Hanover

19-06-20

Further improvements to error messages

New Excel based preprocessor (input and output regions in a workbook) - will be used on TMK

XLSX

Premiums AllRisks, can override Settlement Due Date

Importer bug fix, complain properly about duff contract years (Premiums)

Finish previous Hanover work as reference

12-06-20

More work on tracking

Further improvements to compositionxl

Recent user activity downloadable

New error list shows at the top of the reports section if any errors occur

will accept 'az=' instead of 'compositionXL'. Will also be tolerant of no space after '='

if RepeatSheet set is empty, will not show the sheet

XLSX

Tracking stuff on AllRisks claims

Oilfields build continues

04-06-20

Compositexl tweaks

Can have an import version sheet without a model

Tracking Db initial version, needs more work

XLSX

T account totals on specify premium feed

Claims feed tweaks (Limnet currencies)

Oilfield currencies work

ECF fix - claims count on summary sheet
