@@ -1,3 +1,7 @@
+21-08-20
+
+Wespecialty had a file that was jamming poi. Latest version fixed that, much of the importer moved to that, more can be tidied but the fix is required now
+
 18-08-20
 
 Various bug fixes
@@ -17,7 +21,7 @@ AllRisks tweaks - what is there now does seem to submit on 0 grossamt claims
 Import file template lookup bug fix
 
 XLSX
-
+i
 Continue Oilfield Claims and WeSpeciality build
 
 08-07-20
